<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout 
   android:id="@+id/editTagDialog"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical"
   xmlns:android="http://schemas.android.com/apk/res/android"
>

      <LinearLayout 
		   android:id="@+id/titleLayout"
		   android:layout_width="match_parent"
		   android:layout_height="wrap_content"
		   android:orientation="horizontal"		   
		>
		
         <TextView
           android:id="@+id/titleTV"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="0.3"
           android:gravity="center"
           android:singleLine="true"
           android:textColor="@color/Orange"
           android:layout_marginTop="10dip"
           android:text="@string/title"   
           android:background="@color/black" 
           android:textColorHint="@color/White"          
   		 /> 
          
         <EditText
           android:id="@+id/editTitle"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="0.7"
           android:gravity="center"
           android:singleLine="true"
           android:textColor="@color/White"
           android:layout_marginTop="10dip"
           android:hint="@string/title"   
           android:background="@color/black" 
           android:textColorHint="@color/White"          
   		/>
         
        </LinearLayout>
         
        <LinearLayout 
		   android:id="@+id/artistLayout"
		   android:layout_width="match_parent"
		   android:layout_height="wrap_content"
		   android:orientation="horizontal"		   
		>
		
         <TextView
           android:id="@+id/artistTV"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="0.3"
           android:gravity="center"
           android:singleLine="true"
           android:textColor="@color/Orange"
           android:layout_marginTop="10dip"
           android:text="@string/artist"   
           android:background="@color/black" 
           android:textColorHint="@color/White"          
   		 /> 
          
         <EditText
           android:id="@+id/editArtist"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="0.7"
           android:gravity="center"
           android:singleLine="true"
           android:textColor="@color/White"
           android:layout_marginTop="10dip"
           android:hint="@string/artist"   
           android:background="@color/black" 
           android:textColorHint="@color/White"          
   		/>
         
        </LinearLayout>
        
        <LinearLayout 
		   android:id="@+id/albumLayout"
		   android:layout_width="match_parent"
		   android:layout_height="wrap_content"
		   android:orientation="horizontal"		   
		>
		
         <TextView
           android:id="@+id/albumTV"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="0.3"
           android:gravity="center"
           android:singleLine="true"
           android:textColor="@color/Orange"
           android:layout_marginTop="10dip"
           android:text="@string/album"   
           android:background="@color/black" 
           android:textColorHint="@color/White"          
   		 /> 
          
         <EditText
           android:id="@+id/editAlbum"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="0.7"
           android:gravity="center"
           android:singleLine="true"
           android:textColor="@color/White"
           android:layout_marginTop="10dip"
           android:hint="@string/album"   
           android:background="@color/black" 
           android:textColorHint="@color/White"          
   		/>
         
        </LinearLayout>
   		
 <!--   		<EditText
           android:id="@+id/editArtist"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/White"
           android:textSize="30.0sp"         
           android:hint="@string/artist"     
           android:background="@color/black" 
           android:textColorHint="@color/White"        
           android:lines="1"
           android:ellipsize="marquee"
           android:fadingEdge="horizontal"
           android:marqueeRepeatLimit="marquee_forever"
           android:scrollHorizontally="true"       
   		/> -->
     
</LinearLayout>